# TrafficLightDetection

./: .gitignore  .gitignore.orig  README.md  README.md.BACKUP.36350.md  README.md.LOCAL.36350.md
Diploma/CzechThesisExample/: main.tex
OpenCvTest/: CMakeLists.txt  OpenCvUtils.cpp  OpenCvUtils.h  main.cpp
documentation/: Document.tex  Doxyfile  diploma.cls
documentation/html/: Logger_8h.html  Logger_8h_source.html  Stopwatch_8h.html  Stopwatch_8h_source.html  annotated.html  args_8hxx.html  args_8hxx_source.html  classLaraParser_1_1Annotation-members.html  classLaraParser_1_1Annotation.html  classLaraParser_1_1Rectangle-members.html  classLaraParser_1_1Rectangle.html  classLogger-members.html  classLogger.html  classStopwatch-members.html  classStopwatch.html  classargs_1_1ActionFlag-members.html  classargs_1_1ActionFlag.html  classargs_1_1ArgumentParser-members.html  classargs_1_1ArgumentParser.html  classargs_1_1Base-members.html  classargs_1_1Base.html  classargs_1_1Command-members.html  classargs_1_1Command.html  classargs_1_1Command_1_1RaiiSubparser-members.html  classargs_1_1Command_1_1RaiiSubparser.html  classargs_1_1Completion-members.html  classargs_1_1Completion.html  classargs_1_1CompletionFlag-members.html  classargs_1_1CompletionFlag.html  classargs_1_1CounterFlag-members.html  classargs_1_1CounterFlag.html  classargs_1_1Error-members.html  classargs_1_1Error.html  classargs_1_1ExtraError-members.html  classargs_1_1ExtraError.html  classargs_1_1Flag-members.html  classargs_1_1Flag.html  classargs_1_1FlagBase-members.html  classargs_1_1FlagBase.html  classargs_1_1GlobalOptions-members.html  (+128 more)
src/XmlAnnotationInfoTool/: CMakeLists.txt  main.cpp
src/app/: .app_settings.xml.swp  .traffic_light_test.cpp.swp  CMakeLists.txt  LaraParser.py  Lara_UrbanSeq1_GroundTruth_GT.txt  Logger.cpp  Logger.h  OpenCvUtils.cpp  OpenCvUtils.h  Stopwatch.cpp  Stopwatch.h  TrafficLightDetector.h  XmlAnnotationInfoTool  app_settings.xml  app_settings.xml.orig  car_detector.h  car_detector_test.cpp  cropper_test.cpp  cropper_test.h  cv_utils.cpp  cv_utils.h  full_train.sh  lara_settings.xml  location_detector_trainer.h  main.cpp  main.h  make_notes.txt  mmod_detector.cpp  mmod_detector.h  net_definition.h  net_definition.h.orig  notes.txt  original_settings.xml  parsed.xml  settings.cpp  settings.h  state_detector_trainer.h  traffic_light_detector.h  traffic_light_detector_trainer.h  traffic_light_test.cpp  (+5 more)
src/app/test_dataset/: artifical.xml  imglab2  simple_train.xml  simple_train_single_label.xml  test.xml  train.xml  train_new.xml
(+117 files in other folders)
